--- a/WhenResponse.Test/WhenResponse.Test.csproj
+++ b/WhenResponse.Test/WhenResponse.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ResponseWhen.RestSharp\ResponseWhen.RestSharp.csproj" />
+    <ProjectReference Include="..\WhenResponse.RestSharp\WhenResponse.RestSharp.csproj" />
   </ItemGroup>
 
 </Project>
