--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/ResponseWhen.Test/bin/Debug/netcoreapp2.0/ResponseWhen.Test.dll",
+            "program": "${workspaceFolder}/WhenResponse.Test/bin/Debug/netcoreapp2.0/WhenResponse.Test.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/ResponseWhen.Test",
+            "cwd": "${workspaceFolder}/WhenResponse.Test",
             // For more information about the 'console' field, see https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md#console-terminal-window
             "console": "internalConsole",
             "stopAtEntry": false,
