Alterando para .netcore

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,37 @@
 {
+    // See https://go.microsoft.com/fwlink/?LinkId=733558
+    // for the documentation about the tasks.json format
     "version": "2.0.0",
     "tasks": [
         {
             "label": "build",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/WhenResponse.Test/WhenResponse.Test.csproj"
-            ],
+            "command": "dotnet build ${workspaceFolder}/",
+            "type": "shell",
+            "group": "build",
+            "presentation": {
+                "reveal": "silent"
+            },
             "problemMatcher": "$msCompile"
+        },
+            {
+            "label": "publish",
+            "command": "dotnet publish -c Release ${workspaceFolder}/",
+            "type": "shell",
+            "group": "build",
+            "presentation": {
+                "reveal": "silent"
+            },
+            "problemMatcher": "$msCompile"
+        },
+        {
+                "label": "pack",
+                "command": "dotnet pack -c Release ${workspaceFolder}/",
+                "type": "shell",
+                "group": "build",
+                "presentation": {
+                    "reveal": "silent"
+                },
+                "problemMatcher": "$msCompile"
         }
     ]
 }
